# ts7820-utils

./: LICENSE  configure.ac
debian/: README  README.Debian  README.source  changelog  control  copyright  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  ts7820-utils.cron.d.ex  ts7820-utils.default.ex  ts7820-utils.doc-base.EX  watch.ex
scripts/: Makefile.am  run-idle-injector.sh
src/: Makefile.am  frac-clk-gen.c  idleinject.c  load_fpga_flash.c  set_uart_baud.c  silabs.c  tshwctl.c  tsmicroctl.c  tsprodinfo.c
src/ratmath/: Makefile  ratmath.lisp
