AM_CPPFLAGS = -Wall

tshwctl_SOURCES = tshwctl.c
tshwctl_LDFLAGS = 

tsmicroctl_SOURCES = tsmicroctl.c
tsmicroctl_LDFLAGS = 

set_uart_baud_SOURCES = set_uart_baud.c
set_uart_baud_CPPFLAGS = -DCTL

load_fpga_flash_SOURCES = load_fpga_flash.c
load_fpga_flash_LDFLAGS =

bin_PROGRAMS = tshwctl set_uart_baud load_fpga_flash tsmicroctl
